--- a/css/styles.css
+++ b/css/styles.css
@@ -30,25 +30,24 @@ p {
 p + p {
   margin-top: 1em; /* no top margin on subsequent paragraphs */
 }
-
-
-.sublogo{
-  text-transform: uppercase;
-  font-size: 20px;
-}
-
 .wrapper{
   width: 75%;
   margin: 0 auto;
 }
 
 .logo {
-  border: 1px solid red;
-  margin: 0;
+  margin: 1.5em 0 0;
   width: 100%;
 }
 
+.social-links {
+  border-top: 1px solid #888;
+}
 
+.social-links ul{
+  list-style: none;
+  width: 100%;
+}
 
 
 
