--- a/css/main.css
+++ b/css/main.css
@@ -8,38 +8,38 @@
 
 
 body {
-  color: #333;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1em;
+  color: #444;
+  font-family: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-size: 1.2em;
   -webkit-font-smoothing: antialiased;
-  line-height: 1.5em; }
+  line-height: 1.8em; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   line-height: 1.25em;
   margin: 0;
   text-rendering: optimizeLegibility; }
 
 h1 {
-  font-size: 2.25em; }
+  font-size: 2.7em; }
 
 h2 {
-  font-size: 2em; }
+  font-size: 2.4em; }
 
 h3 {
-  font-size: 1.75em; }
+  font-size: 2.1em; }
 
 h4 {
-  font-size: 1.5em; }
+  font-size: 1.8em; }
 
 h5 {
-  font-size: 1.25em; }
+  font-size: 1.5em; }
 
 h6 {
-  font-size: 1em; }
+  font-size: 1.2em; }
 
 p {
-  margin: 0 0 0.75em; }
+  margin: 0 0 0.9em; }
 
 a {
   color: #477DCA;
@@ -58,7 +58,7 @@ hr {
   border-left: none;
   border-right: none;
   border-top: none;
-  margin: 1.5em 0; }
+  margin: 1.8em 0; }
 
 img {
   margin: 0;
@@ -70,22 +70,22 @@ abbr, acronym {
 
 address {
   display: block;
-  margin: 0 0 0.75em; }
+  margin: 0 0 0.9em; }
 
 hgroup {
-  margin-bottom: 0.75em; }
+  margin-bottom: 0.9em; }
 
 del {
-  color: #595959; }
+  color: #6a6a6a; }
 
 blockquote {
   border-left: 2px solid #DDD;
-  color: #595959;
-  margin: 1.5em 0;
-  padding-left: 0.75em; }
+  color: #6a6a6a;
+  margin: 1.8em 0;
+  padding-left: 0.9em; }
 
 cite {
-  color: #737373;
+  color: #848484;
   font-style: italic; }
   cite:before {
     content: '\2014 \00A0'; }
@@ -93,17 +93,17 @@ cite {
 fieldset {
   background: #f7f7f7;
   border: 1px solid #DDD;
-  margin: 0 0 0.75em 0;
-  padding: 1.5em; }
+  margin: 0 0 0.9em 0;
+  padding: 1.8em; }
 
 input, label, select {
   display: block;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1em; }
+  font-family: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-size: 1.2em; }
 
 label {
   font-weight: bold;
-  margin-bottom: 0.375em; }
+  margin-bottom: 0.45em; }
   label.required:after {
     content: "*"; }
   label abbr {
@@ -120,10 +120,10 @@ textarea, input[type="email"], input[type="number"], input[type="password"], inp
   border-radius: 0.1875em;
   border: 1px solid #DDD;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1em;
-  margin-bottom: 0.75em;
-  padding: 0.5em 0.5em;
+  font-family: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-size: 1.2em;
+  margin-bottom: 0.9em;
+  padding: 0.6em 0.6em;
   width: 100%; }
   textarea:hover, input[type="email"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="url"]:hover, input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover, select[multiple=multiple]:hover {
     border-color: #c4c4c4; }
@@ -144,33 +144,33 @@ input[type="search"] {
 
 input[type="checkbox"], input[type="radio"] {
   display: inline;
-  margin-right: 0.375em; }
+  margin-right: 0.45em; }
 
 input[type="file"] {
-  margin-bottom: 0.75em;
-  padding-bottom: 0.5em;
+  margin-bottom: 0.9em;
+  padding-bottom: 0.6em;
   width: 100%; }
 
 select {
   width: auto;
   max-width: 100%;
-  margin-bottom: 1.5em; }
+  margin-bottom: 1.8em; }
 
 table {
   border-collapse: collapse;
-  margin: 0.75em 0;
+  margin: 0.9em 0;
   table-layout: fixed;
   width: 100%; }
 
 th {
   border-bottom: 1px solid #b7b7b7;
   font-weight: bold;
-  padding: 0.75em 0;
+  padding: 0.9em 0;
   text-align: left; }
 
 td {
   border-bottom: 1px solid #DDD;
-  padding: 0.75em 0; }
+  padding: 0.9em 0; }
 
 tr, td, th {
   vertical-align: middle; }
@@ -181,11 +181,11 @@ ul, ol {
   list-style-type: none; }
 
 dl {
-  line-height: 1.5em;
-  margin-bottom: 0.75em; }
+  line-height: 1.8em;
+  margin-bottom: 0.9em; }
   dl dt {
     font-weight: bold;
-    margin-top: 0.75em; }
+    margin-top: 0.9em; }
   dl dd {
     margin: 0; }
 
@@ -197,9 +197,9 @@ dl {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 48.82117%;
+  width: 100%;
   display: block;
-  background: ghostgrey; }
+  border: 1px solid red; }
   .wrapper:last-child {
     margin-right: 0; }
   .wrapper:after {
