Add typography grid.

--- a/scss/bitters/_variables.scss
+++ b/scss/bitters/_variables.scss
@@ -8,8 +8,8 @@ $header-font-family: $base-font-family;
 
 // Sizes
 ///////////////////////////////////////////////////////////////////////////////
-$base-font-size: 1.2em;
-$base-line-height: $base-font-size * 1.5;
+$base-font-size: 1.375rem;
+$base-line-height: $base-font-size * 1.618;
 $base-border-radius: em(3);
 
 // Colors
