--- a/css/main.css
+++ b/css/main.css
@@ -10,36 +10,9 @@
 body {
   color: #444;
   font-family: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1.2em;
+  font-size: 1.375rem;
   -webkit-font-smoothing: antialiased;
-  line-height: 1.8em; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  line-height: 1.25em;
-  margin: 0;
-  text-rendering: optimizeLegibility; }
-
-h1 {
-  font-size: 2.7em; }
-
-h2 {
-  font-size: 2.4em; }
-
-h3 {
-  font-size: 2.1em; }
-
-h4 {
-  font-size: 1.8em; }
-
-h5 {
-  font-size: 1.5em; }
-
-h6 {
-  font-size: 1.2em; }
-
-p {
-  margin: 0 0 0.9em; }
+  line-height: 2.22475rem; }
 
 a {
   color: #477DCA;
@@ -58,7 +31,7 @@ hr {
   border-left: none;
   border-right: none;
   border-top: none;
-  margin: 1.8em 0; }
+  margin: 2.22475rem 0; }
 
 img {
   margin: 0;
@@ -70,10 +43,10 @@ abbr, acronym {
 
 address {
   display: block;
-  margin: 0 0 0.9em; }
+  margin: 0 0 1.11238rem; }
 
 hgroup {
-  margin-bottom: 0.9em; }
+  margin-bottom: 1.11238rem; }
 
 del {
   color: #6a6a6a; }
@@ -81,8 +54,8 @@ del {
 blockquote {
   border-left: 2px solid #DDD;
   color: #6a6a6a;
-  margin: 1.8em 0;
-  padding-left: 0.9em; }
+  margin: 2.22475rem 0;
+  padding-left: 1.11238rem; }
 
 cite {
   color: #848484;
@@ -93,17 +66,17 @@ cite {
 fieldset {
   background: #f7f7f7;
   border: 1px solid #DDD;
-  margin: 0 0 0.9em 0;
-  padding: 1.8em; }
+  margin: 0 0 1.11238rem 0;
+  padding: 2.22475rem; }
 
 input, label, select {
   display: block;
   font-family: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1.2em; }
+  font-size: 1.375rem; }
 
 label {
   font-weight: bold;
-  margin-bottom: 0.45em; }
+  margin-bottom: 0.55619rem; }
   label.required:after {
     content: "*"; }
   label abbr {
@@ -121,9 +94,9 @@ textarea, input[type="email"], input[type="number"], input[type="password"], inp
   border: 1px solid #DDD;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: 'Lato', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-  font-size: 1.2em;
-  margin-bottom: 0.9em;
-  padding: 0.6em 0.6em;
+  font-size: 1.375rem;
+  margin-bottom: 1.11238rem;
+  padding: 0.74158rem 0.74158rem;
   width: 100%; }
   textarea:hover, input[type="email"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="url"]:hover, input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover, select[multiple=multiple]:hover {
     border-color: #c4c4c4; }
@@ -144,33 +117,33 @@ input[type="search"] {
 
 input[type="checkbox"], input[type="radio"] {
   display: inline;
-  margin-right: 0.45em; }
+  margin-right: 0.55619rem; }
 
 input[type="file"] {
-  margin-bottom: 0.9em;
-  padding-bottom: 0.6em;
+  margin-bottom: 1.11238rem;
+  padding-bottom: 0.74158rem;
   width: 100%; }
 
 select {
   width: auto;
   max-width: 100%;
-  margin-bottom: 1.8em; }
+  margin-bottom: 2.22475rem; }
 
 table {
   border-collapse: collapse;
-  margin: 0.9em 0;
+  margin: 1.11238rem 0;
   table-layout: fixed;
   width: 100%; }
 
 th {
   border-bottom: 1px solid #b7b7b7;
   font-weight: bold;
-  padding: 0.9em 0;
+  padding: 1.11238rem 0;
   text-align: left; }
 
 td {
   border-bottom: 1px solid #DDD;
-  padding: 0.9em 0; }
+  padding: 1.11238rem 0; }
 
 tr, td, th {
   vertical-align: middle; }
@@ -181,11 +154,11 @@ ul, ol {
   list-style-type: none; }
 
 dl {
-  line-height: 1.8em;
-  margin-bottom: 0.9em; }
+  line-height: 2.22475rem;
+  margin-bottom: 1.11238rem; }
   dl dt {
     font-weight: bold;
-    margin-top: 0.9em; }
+    margin-top: 1.11238rem; }
   dl dd {
     margin: 0; }
 
@@ -282,7 +255,7 @@ dl {
   margin-right: 2.35765%;
   width: 82.94039%;
   margin-left: 8.5298%;
-  padding-top: 1.8em; }
+  padding-top: 2.22475rem; }
   .social-links ul:last-child {
     margin-right: 0; }
 
@@ -301,7 +274,7 @@ dl {
   margin-right: 2.35765%;
   width: 100%;
   opacity: 0.7;
-  margin-top: 1.8em;
-  margin-bottom: 1.8em; }
+  margin-top: 2.22475rem;
+  margin-bottom: 2.22475rem; }
   .logo:last-child {
     margin-right: 0; }
