--- a/scss/bitters/_typography.scss
+++ b/scss/bitters/_typography.scss
@@ -6,40 +6,80 @@ body {
   line-height: $base-line-height;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $header-font-family;
-  line-height: 1.25em;
-  margin: 0;
-  text-rendering: optimizeLegibility; // Fix the character spacing for headings
-}
+// h1, h2, h3, h4, h5, h6 {
+//   font-family: $header-font-family;
+//   line-height: 1.25em;
+//   margin: 0;
+//   text-rendering: optimizeLegibility; // Fix the character spacing for headings
+// }
 
-h1 {
-  font-size: $base-font-size * 2.25; // 16 * 2.25 = 36px
-}
+// h1 {
+//   font-size: $base-font-size * 2.25; // 16 * 2.25 = 36px
+// }
 
-h2 {
-  font-size: $base-font-size * 2; // 16 * 2 = 32px
-}
+// h2 {
+//   font-size: $base-font-size * 2; // 16 * 2 = 32px
+// }
 
-h3 {
-  font-size: $base-font-size * 1.75; // 16 * 1.75 = 28px
-}
+// h3 {
+//   font-size: $base-font-size * 1.75; // 16 * 1.75 = 28px
+// }
 
-h4 {
-  font-size: $base-font-size * 1.5; // 16 * 1.5 = 24px
-}
+// h4 {
+//   font-size: $base-font-size * 1.5; // 16 * 1.5 = 24px
+// }
 
-h5 {
-  font-size: $base-font-size * 1.25; // 16 * 1.25 = 20px
-}
+// h5 {
+//   font-size: $base-font-size * 1.25; // 16 * 1.25 = 20px
+// }
 
-h6 {
-  font-size: $base-font-size;
-}
+// h6 {
+//   font-size: $base-font-size;
+// }
 
-p {
-  margin: 0 0 ($base-line-height * .5);
-}
+// p {
+//   margin: 0 0 ($base-line-height * .5);
+// }
+
+// GRIDLOVER
+
+
+$measure: 760px;
+
+$h1-font-size: 5.8125rem;
+$h1-line: 3.0625rem;
+$h1-lines: 2;
+$h1-line-height: $h1-line * $h1-lines;
+$h1-margin-top: 2 * $h1-line;
+$h1-margin-bottom: 1 * $h1-line;
+
+$h2-font-size: 3.625rem;
+$h2-line: 6.125rem;
+$h2-lines: 2;
+$h2-line-height: $h2-line * $h2-lines;
+$h2-margin-top: 2 * $h2-line;
+$h2-margin-bottom: 1 * $h2-line;
+
+$h3-font-size: 2.25rem;
+$h3-line: 3.0625rem;
+$h3-lines: 1;
+$h3-line-height: $h3-line * $h3-lines;
+$h3-margin-top: 1 * $h3-line;
+$h3-margin-bottom: 1 * $h3-line;
+
+$h4-font-size: 1.375rem;
+$h4-line: 3.0625rem;
+$h4-lines: 1;
+$h4-line-height: $h4-line * $h4-lines;
+$h4-margin-top: 1 * $h4-line;
+$h4-margin-bottom: 1 * $h4-line;
+
+// Variables are rounded to pixels
+// It's safe to multiply with integers
+// eg. h1 {margin: 2*$h1-line 0;}
+// The grid will stay aligned
+
+// End Gridlover
 
 a {
   color: $base-link-color;
