--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,13 @@ dl {
   left: -9999px; }
 
 
+article {
+  display: block; }
+  article:after {
+    content: "";
+    display: table;
+    clear: both; }
+
 .wrapper {
   display: block;
   width: 90%;
@@ -277,4 +284,23 @@ dl {
   margin-top: 2.22475rem;
   margin-bottom: 2.22475rem; }
   .logo:last-child {
+    margin-right: 0; }
+
+.resume-paragraph {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 82.94039%;
+  margin-top: 0; }
+  .resume-paragraph:last-child {
+    margin-right: 0; }
+
+.resume-link {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 14.70196%;
+  margin-right: 0;
+  margin-top: 1em; }
+  .resume-link:last-child {
     margin-right: 0; }
