--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,64 @@ dl {
 
 
 
+button {
+  border: 1px solid #0772e4;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 0 0 #8ebef1;
+  color: white;
+  display: inline-block;
+  font-size: inherit;
+  font-weight: bold;
+  background-color: #4294f0;
+  background-image: -webkit-linear-gradient(#4294f0, #0779f3);
+  background-image: linear-gradient(#4294f0, #0779f3);
+  padding: 7px 18px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #0068d7;
+  background-clip: padding-box; }
+  button:hover:not(:disabled) {
+    box-shadow: inset 0 1px 0 0 #60a3ec;
+    cursor: pointer;
+    background-color: #2f89ea;
+    background-image: -webkit-linear-gradient(#2f89ea, #0872e3);
+    background-image: linear-gradient(#2f89ea, #0872e3); }
+  button:active:not(:disabled), button:focus:not(:disabled) {
+    border: 1px solid #0772e4;
+    box-shadow: inset 0 0 8px 4px #086ad3, inset 0 0 8px 4px #086ad3; }
+  button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed; }
+
+input[type="submit"] {
+  border: 1px solid #245aa6;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 0 0 #89a8d5;
+  color: white;
+  display: inline-block;
+  font-size: inherit;
+  font-weight: bold;
+  background-color: #477DCA;
+  background-image: -webkit-linear-gradient(#477DCA, #2761b2);
+  background-image: linear-gradient(#477DCA, #2761b2);
+  padding: 7px 18px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #1b509a;
+  background-clip: padding-box;
+  font-size: 1.375rem;
+  outline: none; }
+  input[type="submit"]:hover:not(:disabled) {
+    box-shadow: inset 0 1px 0 0 #628dc8;
+    cursor: pointer;
+    background-color: #3c71bb;
+    background-image: -webkit-linear-gradient(#3c71bb, #255aa5);
+    background-image: linear-gradient(#3c71bb, #255aa5); }
+  input[type="submit"]:active:not(:disabled), input[type="submit"]:focus:not(:disabled) {
+    border: 1px solid #245aa6;
+    box-shadow: inset 0 0 8px 4px #235397, inset 0 0 8px 4px #235397; }
+  input[type="submit"]:disabled {
+    opacity: 0.5;
+    cursor: not-allowed; }
+
 /* Icon font */
 @font-face {
   font-family: 'menor_awesome';
@@ -308,3 +366,58 @@ article {
 .work-image {
   width: 100%;
   max-width: 60em; }
+
+.contact-form {
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2.22475rem;
+  padding-bottom: 2.22475rem;
+  background: #DDD;
+  border-top: 1px solid #999; }
+  .contact-form:after {
+    content: "";
+    display: table;
+    clear: both; }
+
+.form-container {
+  display: block;
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 82.94039%;
+  margin-left: 8.5298%; }
+  .form-container:after {
+    content: "";
+    display: table;
+    clear: both; }
+  .form-container:last-child {
+    margin-right: 0; }
+
+.email-option {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 48.82117%; }
+  .email-option:last-child {
+    margin-right: 0; }
+
+input[type="submit"] {
+  float: left;
+  display: block;
+  margin-right: 2.84259%;
+  width: 38.29445%;
+  margin-left: 61.70555%; }
+  input[type="submit"]:last-child {
+    margin-right: 0; }
+
+footer {
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 2.22475rem;
+  background: #444; }
+  footer:after {
+    content: "";
+    display: table;
+    clear: both; }
