Fix textarea start messing with footer.

--- a/scss/bitters/_variables.scss
+++ b/scss/bitters/_variables.scss
@@ -15,6 +15,7 @@ $base-border-radius: em(3);
 // Colors
 ///////////////////////////////////////////////////////////////////////////////
 
+$yellow: #FFCC91;
 $blue: #477DCA;
 $dark-gray: #444;
 $medium-gray: #999;
