--- a/css/main.css
+++ b/css/main.css
@@ -286,6 +286,36 @@ input[type="submit"] {
   top: -9999px;
   left: -9999px; }
 
+footer {
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 2.22475rem;
+  background: #444;
+  background: #444;
+  padding: 2.22475rem; }
+  footer:after {
+    content: "";
+    display: table;
+    clear: both; }
+  footer .footer-logo {
+    margin-right: 1em;
+    margin-bottom: 1em; }
+    @media screen and (min-width: 53.75em) {
+      footer .footer-logo {
+        float: left;
+        margin-bottom: 0; } }
+  footer .footer-logo {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%;
+    opacity: 1;
+    height: 1.6em;
+    overlay: white; }
+    footer .footer-logo:last-child {
+      margin-right: 0; }
+
 
 article {
   display: block; }
@@ -410,14 +440,3 @@ input[type="submit"] {
   margin-left: 61.70555%; }
   input[type="submit"]:last-child {
     margin-right: 0; }
-
-footer {
-  max-width: 60em;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 2.22475rem;
-  background: #444; }
-  footer:after {
-    content: "";
-    display: table;
-    clear: both; }
