Add simple footer

--- a/scss/bitters/_variables.scss
+++ b/scss/bitters/_variables.scss
@@ -17,6 +17,7 @@ $base-border-radius: em(3);
 
 $yellow: #FFCC91;
 $blue: #477DCA;
+$black: #222;
 $dark-gray: #444;
 $medium-gray: #999;
 $light-gray: #DDD;
