--- a/css/main.css
+++ b/css/main.css
@@ -290,31 +290,31 @@ footer {
   max-width: 60em;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 2.22475rem;
-  background: #444;
-  background: #444;
-  padding: 2.22475rem; }
+  background: #222;
+  padding-top: 1.11238rem;
+  padding-bottom: 0; }
   footer:after {
     content: "";
     display: table;
     clear: both; }
-  footer .footer-logo {
-    margin-right: 1em;
-    margin-bottom: 1em; }
-    @media screen and (min-width: 53.75em) {
-      footer .footer-logo {
-        float: left;
-        margin-bottom: 0; } }
-  footer .footer-logo {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 48.82117%;
-    opacity: 1;
-    height: 1.6em;
-    overlay: white; }
-    footer .footer-logo:last-child {
-      margin-right: 0; }
+
+.footer-logo {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 31.76157%;
+  margin-left: 34.11922%; }
+  .footer-logo:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 40em) {
+    .footer-logo {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 14.70196%;
+      margin-left: 42.64902%; }
+      .footer-logo:last-child {
+        margin-right: 0; } }
 
 
 article {
