--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -3,19 +3,31 @@ footer {
   $footer-color: white;
   $footer-link-color: transparentize($footer-color, .6);
   
-  @include outer-container; 
+  @include row;
+  width: 100%;
   background: $footer-background;
   padding-top: $base-line-height/2;
-  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 .footer-logo {
-  @include span-columns(4);
-  @include shift(4);
+  @include span-columns(6);
+  @include shift(3);
+  padding-bottom: 0;
 
   @include media($medium-screen) {
     @include span-columns(2);
     @include shift(5);
   }
+}
+
+.addendum {
+  @include row;
+  @include span-columns(10);
+  @include shift(1);
+  font-size: $base-font-size/1.5;
+  line-height: $base-font-size;
+  color: $light-gray;
+  text-align: center;
 }
 
