--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,13 +1,15 @@
 footer {
-  $footer-background: $black;
+  $footer-background: $cocoa;
   $footer-color: white;
   $footer-link-color: transparentize($footer-color, .6);
   
   @include row;
   width: 100%;
   background: $footer-background;
-  padding-top: $base-line-height/2;
+  padding-top: $base-line-height/4;
   margin-bottom: 0;
+  border-top: solid 4px $go-flow;
+
 }
 
 .footer-logo {
