--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,7 @@
 @import "footer";
 
 body {
-
+  color: $cocoa;
 }
 
 article{
@@ -22,8 +22,9 @@ article{
 
 .social-links {
   @include row;
-  background-color: #EEE;
+  background-color: $cocoa;
   padding: $base-line-height 0 0.8em;
+  border-bottom: solid 4px $go-flow;
   @include media( $medium-screen-up ){
     font-size: $base-font-size / 1.618;
     padding: $base-line-height/2 0 $base-line-height/4;
@@ -45,9 +46,11 @@ header {
 }
 
 .logo {
-  @include span-columns(12);
-  margin: $base-line-height/2 0 $base-line-height;
-  opacity: 0.7;
+  @include span-columns(10);
+  @include shift(1);
+  margin-top: $base-line-height;
+  margin-bottom: $base-line-height/2;
+  fill: $sourstraws;
   @include media( $medium-screen-up ){
     @include span-columns(6);
     @include shift(3);
@@ -102,8 +105,8 @@ h4 {
   width: 100%;
   margin-top: $base-line-height;
   padding-bottom: $base-line-height;
-  background: $light-gray;
-  border-top: 1px solid $base-accent-color;
+  background: $creamy-cat;
+  border-top: 4px solid $base-accent-color;
 }
 
 .form-container {
